<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1f1f1f"
   >
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingBottom="30dp"
        android:id="@+id/dialog_feedback_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/feedback_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/feedback_dialog_sender_email"
        android:text="@string/feedback_title_category"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/feedback_dialog_sender_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/feedback_dialog_detail_background"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="6dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_dialog_title" />

    <EditText
        android:id="@+id/feedback_dialog_feedback_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/feedback_dialog_detail_background"
        android:gravity="top"
        android:hint="@string/have_any_issues_or_ideas_let_us_know"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="4"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_dialog_sender_email" />

    <TextView
        android:id="@+id/rate_expirience_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rate_your_experience"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_dialog_feedback_detail" />

    <RatingBar
        android:id="@+id/feedback_dialog_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:progressBackgroundTint="#cc313131"
        android:progressTint="#FFd700"
        android:progressTintMode="src_atop"
        android:rating="0"
        android:secondaryProgressTint="@android:color/transparent"
        android:stepSize="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate_expirience_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_feedback_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/submit_button_feedback_background"
        android:text="@string/submit_feedback"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/cancel_feedback_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_dialog_rating_bar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_feedback_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancel_feedback"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/submit_feedback_button"
        app:layout_constraintTop_toTopOf="@id/submit_feedback_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/dialog_feedback_sending_layout"
        android:paddingHorizontal="10dp"
        android:paddingVertical="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Sending..."
            android:textSize="22sp" />

        <ProgressBar
            android:id="@+id/progress_bar_sending_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>